# concept_map

./: .clang-format  .git-blame-ignore-revs  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.org  lockfile.json  pyproject.toml  requirements-dev.txt  vcpkg-configuration.json
.github/workflows/: .yamllint  ci.yml  doxygen-gh-pages.yml  pre-commit.yml
cmake/: gcovr.cfg.in  use-fetch-content.cmake  x64-linux-custom.cmake
etc/: clang-11-toolchain.cmake  clang-12-toolchain.cmake  clang-13-toolchain.cmake  clang-14-toolchain.cmake  clang-15-toolchain.cmake  clang-16-toolchain.cmake  clang-17-toolchain.cmake  clang-18-toolchain.cmake  clang-19-toolchain.cmake  clang-20-toolchain.cmake  clang-21-toolchain.cmake  clang-22-toolchain.cmake  clang-flags.cmake  gcc-10-toolchain.cmake  gcc-11-toolchain.cmake  gcc-14-toolchain.cmake  gcc-15-toolchain.cmake  gcc-16-toolchain.cmake  gcc-flags.cmake  gcc-toolchain.cmake
latex/: Makefile  mybiblio.bib
papers/: Makefile
papers/cppnow24/: bbg-footer.el  concept_maps.html  concept_maps.org  my_theme.css
scripts/: instrument.sh
src/examples/: CMakeLists.txt  cpo_example.cpp  main.cpp  map_example.cpp
src/smd/: CMakeLists.txt
src/smd/conceptmap/: CMakeLists.txt  functor.h  functor.t.cpp  monoid.h  monoid.t.cpp
src/smd/monoid/: CMakeLists.txt  monoid.cpp  monoid.h  monoid.t.cpp
